// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataCollectorsCard should render correctly - no data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-1"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-1"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Data collectors
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <table
          aria-label="Data collectors"
          class="pf-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
          data-ouia-component-id="OUIA-Generated-Table-1"
          data-ouia-component-type="PF4/Table"
          data-ouia-safe="true"
          role="grid"
        >
          <thead
            class=""
          >
            <tr
              aria-label=""
              class="ins-c__no-border"
              data-ouia-component-id="OUIA-Generated-TableRow-1"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <th
                class=""
              />
              <th
                class=""
                scope="col"
              >
                Name
              </th>
              <th
                class=""
                scope="col"
              >
                Status
              </th>
              <th
                class=""
                scope="col"
              >
                Last upload
              </th>
            </tr>
          </thead>
          <tbody
            class=""
            role="rowgroup"
          >
            <tr
              aria-label=""
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-2"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class="pf-c-table__toggle"
                style="padding-left:0"
              >
                <button
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-label="Details"
                  aria-labelledby="simple-node0 expand-toggle0"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  id="expand-toggle0"
                  type="button"
                >
                  <div
                    class="pf-c-table__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                      />
                    </svg>
                  </div>
                </button>
              </td>
              <td
                class=""
                data-label="Name"
              >
                insights-client
              </td>
              <td
                class=""
                data-label="Status"
              >
                N/A
              </td>
              <td
                class=""
                data-label="Last upload"
              >
                N/A
              </td>
            </tr>
            <tr
              aria-label=""
              class="pf-c-table__expandable-row"
              data-ouia-component-id="OUIA-Generated-TableRow-3"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
              hidden=""
            >
              <td
                class=""
              />
              <td
                class=""
                colspan="3"
              >
                <div
                  class="pf-c-table__expandable-row-content"
                >
                  <div
                    class="pf-l-flex"
                  >
                    <div
                      class="ins-c__flex-row-margin"
                    >
                      Insights id:
                    </div>
                    <div
                      class="pf-m-grow"
                    >
                      N/A
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
          <tbody
            class=""
            role="rowgroup"
          >
            <tr
              aria-label=""
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-4"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class="pf-c-table__toggle"
                style="padding-left:0"
              >
                <button
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-label="Details"
                  aria-labelledby="simple-node1 expand-toggle1"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  id="expand-toggle1"
                  type="button"
                >
                  <div
                    class="pf-c-table__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                      />
                    </svg>
                  </div>
                </button>
              </td>
              <td
                class=""
                data-label="Name"
              >
                subscription-manager
              </td>
              <td
                class=""
                data-label="Status"
              >
                N/A
              </td>
              <td
                class=""
                data-label="Last upload"
              >
                N/A
              </td>
            </tr>
            <tr
              aria-label=""
              class="pf-c-table__expandable-row"
              data-ouia-component-id="OUIA-Generated-TableRow-5"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
              hidden=""
            >
              <td
                class=""
              />
              <td
                class=""
                colspan="3"
              >
                <div
                  class="pf-c-table__expandable-row-content"
                >
                  <div
                    class="pf-l-flex"
                  >
                    <div
                      class="ins-c__flex-row-margin"
                    >
                      Subscription manager id:
                    </div>
                    <div
                      class="pf-m-grow"
                    >
                      N/A
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
          <tbody
            class=""
            role="rowgroup"
          >
            <tr
              aria-label=""
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-6"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class=""
              />
              <td
                class=""
                data-label="Name"
              >
                Satellite/Discovery
              </td>
              <td
                class=""
                data-label="Status"
              >
                N/A
              </td>
              <td
                class=""
                data-label="Last upload"
              >
                N/A
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</article>
`;

exports[`DataCollectorsCard should render correctly with data 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-2"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-2"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Data collectors
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <table
          aria-label="Data collectors"
          class="pf-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
          data-ouia-component-id="OUIA-Generated-Table-2"
          data-ouia-component-type="PF4/Table"
          data-ouia-safe="true"
          role="grid"
        >
          <thead
            class=""
          >
            <tr
              aria-label=""
              class="ins-c__no-border"
              data-ouia-component-id="OUIA-Generated-TableRow-7"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <th
                class=""
              />
              <th
                class=""
                scope="col"
              >
                Name
              </th>
              <th
                class=""
                scope="col"
              >
                Status
              </th>
              <th
                class=""
                scope="col"
              >
                Last upload
              </th>
            </tr>
          </thead>
          <tbody
            class=""
            role="rowgroup"
          >
            <tr
              aria-label=""
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-8"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class="pf-c-table__toggle"
                style="padding-left:0"
              >
                <button
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-label="Details"
                  aria-labelledby="simple-node0 expand-toggle0"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-3"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  id="expand-toggle0"
                  type="button"
                >
                  <div
                    class="pf-c-table__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                      />
                    </svg>
                  </div>
                </button>
              </td>
              <td
                class=""
                data-label="Name"
              >
                insights-client
              </td>
              <td
                class=""
                data-label="Status"
              >
                Active
              </td>
              <td
                class=""
                data-label="Last upload"
              >
                13 May 2022 07:42 UTC
              </td>
            </tr>
            <tr
              aria-label=""
              class="pf-c-table__expandable-row"
              data-ouia-component-id="OUIA-Generated-TableRow-9"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
              hidden=""
            >
              <td
                class=""
              />
              <td
                class=""
                colspan="3"
              >
                <div
                  class="pf-c-table__expandable-row-content"
                >
                  <div
                    class="pf-l-flex"
                  >
                    <div
                      class="ins-c__flex-row-margin"
                    >
                      Insights id:
                    </div>
                    <div
                      class="pf-m-grow"
                    >
                      1234
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
          <tbody
            class=""
            role="rowgroup"
          >
            <tr
              aria-label=""
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-10"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class="pf-c-table__toggle"
                style="padding-left:0"
              >
                <button
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-label="Details"
                  aria-labelledby="simple-node1 expand-toggle1"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-4"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  id="expand-toggle1"
                  type="button"
                >
                  <div
                    class="pf-c-table__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                      />
                    </svg>
                  </div>
                </button>
              </td>
              <td
                class=""
                data-label="Name"
              >
                subscription-manager
              </td>
              <td
                class=""
                data-label="Status"
              >
                N/A
              </td>
              <td
                class=""
                data-label="Last upload"
              >
                N/A
              </td>
            </tr>
            <tr
              aria-label=""
              class="pf-c-table__expandable-row"
              data-ouia-component-id="OUIA-Generated-TableRow-11"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
              hidden=""
            >
              <td
                class=""
              />
              <td
                class=""
                colspan="3"
              >
                <div
                  class="pf-c-table__expandable-row-content"
                >
                  <div
                    class="pf-l-flex"
                  >
                    <div
                      class="ins-c__flex-row-margin"
                    >
                      Subscription manager id:
                    </div>
                    <div
                      class="pf-m-grow"
                    >
                      N/A
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
          <tbody
            class=""
            role="rowgroup"
          >
            <tr
              aria-label=""
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-12"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class=""
              />
              <td
                class=""
                data-label="Name"
              >
                Satellite/Discovery
              </td>
              <td
                class=""
                data-label="Status"
              >
                N/A
              </td>
              <td
                class=""
                data-label="Last upload"
              >
                N/A
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</article>
`;

exports[`DataCollectorsCard should render custom collectors 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-3"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-l-stack pf-m-gutter"
    >
      <div
        class="pf-l-stack__item"
      >
        <div
          class="pf-c-content"
        >
          <h1
            class=""
            data-ouia-component-id="OUIA-Generated-Text-3"
            data-ouia-component-type="PF4/Text"
            data-ouia-safe="true"
            data-pf-content="true"
          >
            Data collectors
          </h1>
        </div>
      </div>
      <div
        class="pf-l-stack__item pf-m-fill"
      >
        <table
          aria-label="Data collectors"
          class="pf-c-table pf-m-grid-md pf-m-compact pf-m-no-border-rows"
          data-ouia-component-id="OUIA-Generated-Table-3"
          data-ouia-component-type="PF4/Table"
          data-ouia-safe="true"
          role="grid"
        >
          <thead
            class=""
          >
            <tr
              aria-label=""
              class="ins-c__no-border"
              data-ouia-component-id="OUIA-Generated-TableRow-13"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <th
                class=""
              />
              <th
                class=""
                scope="col"
              >
                Name
              </th>
              <th
                class=""
                scope="col"
              >
                Status
              </th>
              <th
                class=""
                scope="col"
              >
                Last upload
              </th>
            </tr>
          </thead>
          <tbody
            class=""
            role="rowgroup"
          >
            <tr
              aria-label=""
              class=""
              data-ouia-component-id="OUIA-Generated-TableRow-14"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
            >
              <td
                class="pf-c-table__toggle"
                style="padding-left:0"
              >
                <button
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-label="Details"
                  aria-labelledby="simple-node0 expand-toggle0"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-5"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  id="expand-toggle0"
                  type="button"
                >
                  <div
                    class="pf-c-table__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                      />
                    </svg>
                  </div>
                </button>
              </td>
              <td
                class=""
                data-label="Name"
              >
                collector name
              </td>
              <td
                class=""
                data-label="Status"
              />
              <td
                class=""
                data-label="Last upload"
              >
                01 Jan 2260 00:00 UTC
              </td>
            </tr>
            <tr
              aria-label=""
              class="pf-c-table__expandable-row"
              data-ouia-component-id="OUIA-Generated-TableRow-15"
              data-ouia-component-type="PF4/TableRow"
              data-ouia-safe="true"
              hidden=""
            >
              <td
                class=""
              />
              <td
                class=""
                colspan="3"
              >
                <div
                  class="pf-c-table__expandable-row-content"
                >
                  <div
                    class="pf-l-flex"
                  >
                    <div
                      class="ins-c__flex-row-margin"
                    >
                      reporter id:
                    </div>
                    <div
                      class="pf-m-grow"
                    >
                      1234567
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</article>
`;
